# apiary

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  __version__.py  app.py  cli.py  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  settings_template.json
.github/workflows/: ci.yml  dependency-review.yml  docs.yml  release.yml
_server/nginx/: api.domain.com.nginx  api.domain.nginx  apiary.nginx
_server/scripts/: install.sh  update.sh
_server/systemd/: apiary.service
_server/units/: api.domain.com.service  api.domain.service
about/changelog/: index.html
about/contributing/: index.html
about/license/: index.html
about/summary/: index.html
config/: __init__.py  endpoint_config.py  endpoints_template.json  settings.py  settings_template.json
core/: __init__.py  api_key_manager.py  api_key_validator.py  cache.py  dependencies.py  exceptions.py  logging_config.py  metrics.py  middleware.py  rate_limiter.py  request_validation.py  router_factory.py
core/auth/: __init__.py  authentication.py  authorization.py
core/services/: __init__.py  base.py
deployment/configuration/: index.html
deployment/monitoring/: index.html
deployment/overview/: index.html
deployment/server-setup/: index.html
development/cli/: index.html
development/code-quality/: index.html
development/setup/: index.html
development/structure/: index.html
development/testing/: index.html
docs/: index.md
docs/about/: changelog.md  contributing.md  license.md  summary.md
docs/deployment/: configuration.md  docker.md  monitoring.md  overview.md  server-setup.md  updating.md
docs/development/: cli.md  code-quality.md  setup.md  structure.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: adding-endpoints.md  advanced-configuration.md  advanced-endpoints.md  api-key-examples.md  api-key-validation.md  authentication.md  builtin-endpoints.md  configurable-endpoints.md  creating-services.md  overview.md
docs/reference/: cli.md  config.md  core.md  models.md  quick-reference.md  services.md  structure.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/adding-endpoints/: index.html
guide/authentication/: index.html
guide/builtin-endpoints/: index.html
guide/configurable-endpoints/: index.html
guide/creating-services/: index.html
guide/overview/: index.html
models/: requests.py  responses.py
reference/config/: index.html
reference/core/: index.html
reference/models/: index.html
reference/services/: index.html
routers/: __init__.py  auth.py  endpoints.py  health.py  home.py  metrics.py
search/: search_index.json
services/: __init__.py  crypto.py  crypto_service.py  hello_service.py
templates/home/: index.html
templates/shared/: layout.html
tests/: __init__.py  conftest.py
tests/integration/: test_endpoints.py
tests/unit/: test_auth.py  test_services.py
