[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "apiary"
version = "0.1.0"
description = "Apiary - Personal API service for various projects"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "gunicorn>=21.2.0",
    "uvloop>=0.19.0",
    "httptools>=0.6.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=25.12.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "click>=8.1.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.1.0",
]

[tool.uv]
default-groups = ["dev", "docs"]

[project.scripts]
apiary = "cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["."]
